2000-10-16 11:36:52  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnultimate.el (nnultimate-forum-table-p): Be a bit more
	restrictive. 
	(nnultimate-table-regexp): New variable.
	(nnultimate-forum-table-p): Use it.

2000-10-30  Ed L Cashin <ecashin@coe.uga.edu>

	* gnus-sum.el (gnus-summary-expire-articles): Save point.

2000-10-30 08:52:50  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml-sec.el (mml-pgpmime-sign-buffer): Use mml2015-sign.
	(mml-pgpmime-encrypt-buffer): Use mml2015-encrypt.

2000-10-30 08:38:12  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml2015.el: Shut up.

2000-10-30 08:17:46  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el (gnus-server-browse-hashtb): Removed.
	* gnus-group.el (gnus-group-prepare-flat-list-dead): Use gnus-active.
	(gnus-group-insert-group-line-info): Use simplified method.
	* gnus-srvr.el (gnus-browse-foreign-server): Use gnus-set-active.

2000-10-30 01:52:40  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-util.el (gnus-union): Renamed from gnus-agent-union, and
	moved here.
	* gnus-agent.el (gnus-agent-fetch-headers): Use it.
	* gnus-group.el (gnus-group-prepare-flat): Use it.
	* gnus-topic.el (gnus-group-prepare-topics): Use it.

2000-10-30 01:23:49  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml.el (mml-mode): Show menu in XEmacs.

2000-10-30 00:49:33  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-srvr.el (gnus-server-browse-in-group-buffer): New variable.
	(gnus-server-read-server-in-server-buffer): New function.
	(gnus-browse-foreign-server): Browse in group buffer.
	* gnus-group.el (gnus-group-prepare-flat): List group not in list.
	(gnus-group-prepare-flat-list-dead): Use gnus-group-insert-group-line.
	* gnus-topic.el (gnus-group-prepare-topics): Ditto.
	* gnus.el (gnus-server-browse-hashtb): New variable.

2000-10-29 22:31:40  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnfolder.el (nnfolder-open-nov): Use group.

2000-10-29 17:23:15  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnfolder.el: Add NOV. Set version to 2.0.